removed limit of 7 products on home

--- a/app/design/frontend/default/rooja/template/catalog/product/homepage.phtml
+++ b/app/design/frontend/default/rooja/template/catalog/product/homepage.phtml
@@ -53,15 +53,14 @@ foreach ($categories as $_category){
 								<h3><a href="/rewardsref/customer/index/">Invite a Friend</a></h3>
 								<p>Share what&rsquo;s in with your friends on Facebook! Invite a friend and receive $25 to spend on Rooja!</p>
 							</article>
-						<?php }if ($i < 7) {
+						<?php }
              ?>
              
              <article class="homeSale size2 fl masonry">
                 <a href="<?php echo  $c->getURL() ?>" title="View sale details for: <?php echo $c->getName(); ?>" class="product-image"><img src="/media/catalog/category/<?php echo $c->getThumbnail(); ?>" alt="" width="236px" /></a>
                 <h2><?php echo $c->getName(); ?></h2>
             </article>
-				<?php $i++; }}}}} ?>
-				<?php }} ?>
+				<?php $i++; }}}}  }} ?>
 			
 
 <?php
