--- a/app/design/frontend/default/rooja/template/page/2columns-left.phtml
+++ b/app/design/frontend/default/rooja/template/page/2columns-left.phtml
@@ -43,21 +43,20 @@ if(!Mage::getSingleton('customer/session')->isLoggedIn()) {  // if not logged in
 } ?>
 <body<?php echo $this->getBodyClass()?' class="'.$this->getBodyClass().'"':'' ?>>
 <?php echo $this->getChildHtml('after_body_start') ?>
-<div class="wrapper">
+<section class="staticContent">
+	<div class="container">
     <?php echo $this->getChildHtml('global_notices') ?>
         <?php echo $this->getChildHtml('header') ?>
-        <div class="main-container col2-left-layout">
-            <div class="main">
-                <div class="col-main">
+		<section class="col1 fl"><?php echo $this->getChildHtml('left') ?></section>
+      		<section id="pageContent" class="col3 fl">
                     <?php echo $this->getChildHtml('global_messages') ?>
                     <?php echo $this->getChildHtml('content') ?>
-                </div>
-                <div class="col-left sidebar"><?php echo $this->getChildHtml('left') ?></div>
-            </div>
-        </div>
+			</section>
+
         <?php echo $this->getChildHtml('footer') ?>
         <?php echo $this->getChildHtml('before_body_end') ?>
 </div>
+</section>
 <?php echo $this->getAbsoluteFooter() ?>
 </body>
 </html>
