--- a/app/design/frontend/base/default/template/rewardsref/customer/referral/affiliate.phtml
+++ b/app/design/frontend/base/default/template/rewardsref/customer/referral/affiliate.phtml
@@ -1,7 +1,7 @@
 <div class="page-invite half-col right">
 	<fieldset>
 			<h3 class="page-invite-head">Invite your Friends to Join Rooja!</h3>
-			<legend><p>Copy this link and share to receive Rooja credits!</p></legend>
+			<p>Copy this link and share to receive Rooja credits!</p>
 	        
 		       <input class="invite-input" type="text" value="<?php echo $this->getReferralUrl(); ?>" />
 		               <input class="invite-button" type="submit" title="send" value="Copy" />
