--- a/skin/frontend/default/rooja/css/styles.css
+++ b/skin/frontend/default/rooja/css/styles.css
@@ -135,7 +135,7 @@ ul,ol         { list-style:none; }
 
 .third {width:36%;}
 .twothird {width: 62%;}
-
+.twothird col{width: 60%; padding:10px;}
 
 
 .clear {clear:both;}
@@ -1213,7 +1213,7 @@ fieldset .email-invite {background:#e0e0e0;}
 
 .page-invite {background:#c8d7da;}
 
-input.invite-input {height: 40px;}
+input.invite-input {height: 40px; width: 250px;}
 input.invite-button{height: 40px; color: #fff; font-size:14px; padding: 0px 10px; background: #868686;}
 
 .addthis_default_style {padding: 10px 0;}
