--- a/app/design/frontend/base/default/template/customer/account/dashboard.phtml
+++ b/app/design/frontend/base/default/template/customer/account/dashboard.phtml
@@ -34,64 +34,10 @@
         <h1><?php echo $this->__('My Dashboard') ?></h1>
     </div>
     <?php echo $this->getMessagesBlock()->getGroupedHtml() ?>
-	<?php echo $this->getToolbarBlock()->setTemplate('sales/order/history.phtml')->toHtml(); ?>
     <?php echo $this->getChildHtml('hello') ?>
     <?php echo $this->getChildHtml('top') ?>
 
 
-	<?php $_orders = $this->getOrders(); ?>
-	<div class="page-title">
-	    <h1><?php echo $this->__('My Orders') ?></h1>
-	</div>
-	<?php echo $this->getPagerHtml(); ?>
-	<?php if($_orders->getSize()): ?>
-	<table class="data-table" id="my-orders-table">
-	    <col width="1" />
-	    <col width="1" />
-	    <col />
-	    <col width="1" />
-	    <col width="1" />
-	    <col width="1" />
-	    <thead>
-	        <tr>
-	            <th><?php echo $this->__('Order #') ?></th>
-	            <th><?php echo $this->__('Date') ?></th>
-	            <th><?php echo $this->__('Ship To') ?></th>
-	            <th><span class="nobr"><?php echo $this->__('Order Total') ?></span></th>
-	            <th><span class="nobr"><?php echo $this->__('Order Status') ?></span></th>
-	            <th>&nbsp;</th>
-	        </tr>
-	    </thead>
-	    <tbody>
-	        <?php $_odd = ''; ?>
-	        <?php foreach ($_orders as $_order): ?>
-	        <tr>
-	            <td><?php echo $_order->getRealOrderId() ?></td>
-	            <td><span class="nobr"><?php echo $this->formatDate($_order->getCreatedAtStoreDate()) ?></span></td>
-	            <td><?php echo $_order->getShippingAddress() ? $this->htmlEscape($_order->getShippingAddress()->getName()) : '&nbsp;' ?></td>
-	            <td><?php echo $_order->formatPrice($_order->getGrandTotal()) ?></td>
-	            <td><em><?php echo $_order->getStatusLabel() ?></em></td>
-	            <td class="a-center">
-	                <span class="nobr"><a href="<?php echo $this->getViewUrl($_order) ?>"><?php echo $this->__('View Order') ?></a>
-	                    <?php /*<span class="separator">|</span><a href="<?php echo $this->getTrackUrl($_order) ?>"><?php echo $this->__('Track Order') ?></a>&nbsp;*/ ?>
-	                    <?php if ($this->helper('sales/reorder')->canReorder($_order)) : ?>
-	                    <span class="separator">|</span> <a href="<?php echo $this->getReorderUrl($_order) ?>" class="link-reorder"><?php echo $this->__('Reorder') ?></a>
-	                <?php endif ?>
-	                </span>
-	            </td>
-	        </tr>
-	        <?php endforeach; ?>
-	    </tbody>
-	</table>
-	<script type="text/javascript">decorateTable('my-orders-table');</script>
-	<?php echo $this->getPagerHtml(); ?>
-	<?php else: ?>
-	    <p><?php echo $this->__('You have placed no orders.'); ?></p>
-	<?php endif ?>
-
-=======
-	<?php echo $this->getChildHtml('affiliate'); ?>
->>>>>>> f306147ee91b4b9c64b77e31dac67a70a75c680b
 	<div class="page-invite half-col right">
 		<fieldset>
 				<h3 class="page-invite-head">Invite your Friends to Join Rooja!</h3>
@@ -100,7 +46,7 @@
 			       <input class="invite-input" type="text" value="<?php echo $this->getReferralUrl(); ?>" />
 			               <input class="invite-button" type="submit" title="send" value="Copy" />
 
-							<div class="addthis_toolbox addthis_default_style" addthis:url="<?php echo $this->getReferralUrl(); ?>">
+							<div class="addthis_toolbox addthis_default_style">
 							<a class="addthis_button_facebook"><img src="<?php echo $this->getSkinUrl('images/icons/facebook-blue-24.png'); ?>" alt="facebook icon"></a>
 							<a class="addthis_button_twitter"><img src="<?php echo $this->getSkinUrl('images/icons/twitter-teal-24.png'); ?>" alt="twitter icon"></a>
 							</div>
@@ -111,6 +57,7 @@
 		<a class="right" href="/rewardsref/customer/index/">Your Invitations</a>
 		
 	</div>
+
     <div class="half-col  d-account">
 	           <a class="editable right" href="<?php echo $this->getUrl('customer/account/edit') ?>"><?php echo $this->__('Edit') ?></a>
         <div class="box-head">
