--- a/skin/frontend/default/rooja/css/styles.css
+++ b/skin/frontend/default/rooja/css/styles.css
@@ -1143,6 +1143,8 @@ tr.summary-details-excluded { font-style:italic; }
 .dashboard .box-tags .number { float:left; font-size:10px; font-weight:bold; line-height:1; color:#fff; margin:3px -20px 0 0; padding:2px 3px; background:#ddd; }
 .dashboard .box-tags .details { margin-left:20px; }
 
+.block-account{line-height:20px;}
+
 /********** Dashboard > */
 
 /* Address Book */
