--- a/skin/frontend/default/rooja/css/rooja.css
+++ b/skin/frontend/default/rooja/css/rooja.css
@@ -203,7 +203,7 @@ ul#myAccount li ul li a:hover{
 
 .staticContent{margin:30px 0 30px;overflow:hidden;}
 .staticContent h1{margin-bottom:20px;}
-.staticContent h2{margin:30px 0 10px;}
+.staticContent h2{margin:30px 0 10px;color:#431f4c;}
     /*#pageContent{margin-top:-30px;}*/
     #pageContent{margin-top:20px;}
 
