styling referral issue

--- a/skin/frontend/default/rooja/css/styles.css
+++ b/skin/frontend/default/rooja/css/styles.css
@@ -1215,7 +1215,7 @@ tr.summary-details-excluded { font-style:italic; }
 h3.page-invite-head  {font-family: arial; font-size: 16px; color: #3c474b; font-weight:bold;}
 
 referrals h1 { color: #431F4C;}
-.ref-form {background:#e0e0e0;}
+.ref-form {background:#e0e0e0;padding:12px;}
 fieldset .email-invite {background:#e0e0e0;}
 
 .page-invite {background:#c8d7da;padding:12px;}
