--- a/app/design/frontend/default/rooja/template/page/2columns-left-2.phtml
+++ b/app/design/frontend/default/rooja/template/page/2columns-left-2.phtml
@@ -43,21 +43,21 @@ if(!Mage::getSingleton('customer/session')->isLoggedIn()) {  // if not logged in
 } ?>
 <body<?php echo $this->getBodyClass()?' class="'.$this->getBodyClass().'"':'' ?>>
 <?php echo $this->getChildHtml('after_body_start') ?>
-
+<div class="wrapper">
     <?php echo $this->getChildHtml('global_notices') ?>
         <?php echo $this->getChildHtml('header') ?>
-<section class="staticContent">
-<div class="container">		
-	<section class="col1 fl"><?php echo $this->getChildHtml('left') ?></section>
-      	<section id="pageContent" class="col3 fl">
-        	<?php echo $this->getChildHtml('global_messages') ?>
-         	<?php echo $this->getChildHtml('content') ?>
-		</section>
-</div>
-</section>
+        <div class="main-container col2-left-layout">
+            <div class="main">
+                <div class="col-main">
+                    <?php echo $this->getChildHtml('global_messages') ?>
+                    <?php echo $this->getChildHtml('content') ?>
+                </div>
+                <div class="col-left sidebar"><?php echo $this->getChildHtml('left') ?></div>
+            </div>
+        </div>
         <?php echo $this->getChildHtml('footer') ?>
         <?php echo $this->getChildHtml('before_body_end') ?>
-
+</div>
 <?php echo $this->getAbsoluteFooter() ?>
 </body>
 </html>
