--- a/skin/frontend/default/rooja/css/styles.css
+++ b/skin/frontend/default/rooja/css/styles.css
@@ -199,6 +199,7 @@ p.control input.radio { margin-right:6px; }
 .form-list li.additional-row { border-top:1px solid #ccc; margin-top:10px; padding-top:7px; }
 .form-list li.additional-row .btn-remove { float:right; margin:5px 0 0; }
 .form-list .input-range input.input-text { width:74px; }
+.input-box label{font-size:12px;margin:5px 0;}
 /* Customer */
 .form-list .customer-name-prefix .input-box,
 .form-list .customer-name-suffix .input-box,
@@ -1215,12 +1216,12 @@ tr.summary-details-excluded { font-style:italic; }
 h3.page-invite-head  {font-family: arial; font-size: 16px; color: #3c474b; font-weight:bold;}
 
 referrals h1 { color: #431F4C;}
-.ref-form {background:#e0e0e0;padding:12px;}
+.ref-form {background:#e0e0e0;padding:15px 12px;}
 fieldset .email-invite {background:#e0e0e0;}
 
-.page-invite {background:#c8d7da;padding:12px;}
+.page-invite {background:#c8d7da;padding:15px 12px;}
 
-input.invite-input {height: 36px;line-height:36px;padding:0px 8px;width:265px;}
+input.invite-input {height: 36px;line-height:36px;padding:0px 8px;width:260px;}
 input.invite-button{height: 36px; color: #fff; font-size:14px; padding: 0px 10px; background: #868686;}
 
 .addthis_default_style {padding: 10px 0;}
