--- a/skin/frontend/default/rooja/css/rooja.css
+++ b/skin/frontend/default/rooja/css/rooja.css
@@ -204,6 +204,8 @@ ul#myAccount li ul li a:hover{
 .staticContent{margin:30px 0 30px;overflow:hidden;}
 .staticContent h1{margin-bottom:20px;}
 .staticContent h2{margin:30px 0 10px;color:#431f4c;}
+.staticContent h3{font-size: 1.5em; font-weight: bold;font-family:helvetica;}
+
     /*#pageContent{margin-top:-30px;}*/
     #pageContent{margin-top:20px;}
 
@@ -214,6 +216,7 @@ p.question{margin:0;font-weight:bold;color:#431f4c;}
 #tocLinks a{text-decoration:underline;}
 
 .main{padding-bottom:20px;}
+
 
 
 /* ~~~~~ HOME ~~~~~ */
