--- a/skin/frontend/default/rooja/css/styles.css
+++ b/skin/frontend/default/rooja/css/styles.css
@@ -268,8 +268,8 @@ p.control input.radio { margin-right:6px; }
 
 .buttons-set-order {}
 
-.fieldset { border:1px solid #ddd; background:#fefefe; padding:22px 25px 12px 33px; margin:28px 0; }
-.fieldset .legend { float:left; font-weight:bold; font-size:13px; border:1px solid #fefefe; background:#dedede; color:#333; margin:-33px 0 0 -10px; padding:0 8px; position:relative; }
+.fieldset { /*border:1px solid #ddd; background:#fefefe; padding:22px 25px 12px 33px; margin:28px 0; */}
+.fieldset .legend { /*float:left; font-weight:bold; font-size:13px; border:1px solid #fefefe; background:#dedede; color:#333; margin:-33px 0 0 -10px; padding:0 8px; position:relative; */}
 
 /* Form Validation */
 .validation-advice { clear:both; min-height:13px; margin:3px 0 0; padding-left:17px; font-size:10px; line-height:13px; background:url(../images/validation_advice_bg.gif) 2px 1px no-repeat; color:#f00; }
@@ -1216,13 +1216,9 @@ fieldset .email-invite {background:#e0e0e0;}
 
 .page-invite {background:#c8d7da;}
 
-<<<<<<< HEAD
-input.invite-input {height: 40px; width: 250px;}
-input.invite-button{height: 40px; color: #fff; font-size:14px; padding: 0px 10px; background: #868686;}
-=======
-input.invite-input {height: 36px;line-height:36px;padding:0px 8px;width:265px;}
+
+input.invite-input {height: 36px;line-height:36px;padding:0px 8px;width:263px;}
 input.invite-button{height: 36px; color: #fff; font-size:14px; padding: 0px 10px; background: #868686;}
->>>>>>> f306147ee91b4b9c64b77e31dac67a70a75c680b
 
 .addthis_default_style {padding: 10px 0;}
 
