--- a/skin/frontend/default/rooja/css/rooja.css
+++ b/skin/frontend/default/rooja/css/rooja.css
@@ -209,8 +209,8 @@ ul#myAccount li ul li a:hover{
     /*#pageContent{margin-top:-30px;}*/
     #pageContent{margin-top:20px;}
 
-#pageContent .std ul{font-size:1.2em;line-height:1.4em;list-style:disc outside;margin-left:30px;}
-#pageContent .std  ul li{padding-bottom:5px;}
+#pageContent .std ul, #pageContent .std ol{font-size:1.2em;line-height:1.4em;list-style:disc outside;margin:0 0 20px 30px;}
+#pageContent .std  ul li, #pageContent .std  ol li{padding-bottom:5px;}
 p.question{margin:0;font-weight:bold;color:#431f4c;}
 #tocLinks{font-size:1.2em;line-height:2em;}
 #tocLinks a{text-decoration:underline;}
