account info CSS

--- a/app/design/frontend/base/default/template/customer/account/dashboard.phtml
+++ b/app/design/frontend/base/default/template/customer/account/dashboard.phtml
@@ -50,6 +50,8 @@
 							<script type="text/javascript">var addthis_config = {"data_track_clickback":true};</script>			
 				<script type="text/javascript" src="http://s7.addthis.com/js/250/addthis_widget.js#pubid=philosophie"></script>
 		</fieldset>
+		
+		<a class="right" href="/rewardsref/customer/index">My Invitations</a>
 	</div>
 
     <div class="half-col  d-account">
