--- a/app/design/frontend/base/default/template/customer/form/edit.phtml
+++ b/app/design/frontend/base/default/template/customer/form/edit.phtml
@@ -31,7 +31,7 @@
 <form action="<?php echo $this->getUrl('customer/account/editPost') ?>" method="post" id="form-validate">
     <div class="fieldset">
         <?php echo $this->getBlockHtml('formkey')?>
-        <h2 class="legend"><?php echo $this->__('Account Information') ?></h2>
+        <h4><?php echo $this->__('Account Information') ?></h4>
         <ul class="form-list">
             <li class="fields">
                 <?php echo $this->getLayout()->createBlock('customer/widget_name')->setObject($this->getCustomer())->toHtml() ?>
@@ -59,7 +59,7 @@
             </li>
         </ul>
 
-		   <p class="required"><?php echo $this->__('* Required Fields') ?></p>
+		   <p class="required left"><?php echo $this->__('* Required Fields') ?></p>
 	     <button type="submit" title="<?php echo $this->__('Save') ?>" class="button"><span><span><?php echo $this->__('Save') ?></span></span></button>
 
     </div>
