--- a/app/design/frontend/default/rooja/template/catalog/product/list/upsell.phtml
+++ b/app/design/frontend/default/rooja/template/catalog/product/list/upsell.phtml
@@ -28,17 +28,17 @@
 <ul>
     <?php  $this->setColumnCount(8); // uncomment this line if you want to have another number of columns. also can be changed in layout ?>
     <?php $this->resetItemsIterator() ?>
-    <?php for($_i=0;$_i<$this->getRowCount();$_i++): ?>
+  
         <?php for($_j=0;$_j<$this->getColumnCount();$_j++): ?>
             <?php if($_link=$this->getIterableItem()): ?>
             <li>
-<a href="<?php echo $_link->getProductUrl() ?>"><img src="<?php echo $this->helper('catalog/image')->init($_link, 'small_image')->resize(114)->keepFrame(false) ?>"> <span class="numLikes"><img src="<?php echo $this->getSkinUrl('images/icons/thumbs-up.png'); ?>" alt="Thumbs Up icon"> 40</span></a>
+<a href="<?php echo $_link->getProductUrl() ?>" title="<?php echo $this->htmlEscape($_link->getName()) ?>"><img src="<?php echo $this->helper('catalog/image')->init($_link, 'small_image')->resize(114)->keepFrame(false) ?>" width="114" height="114" alt="<?php echo $this->htmlEscape($_link->getName()) ?>"> <span class="numLikes"><img src="<?php echo $this->getSkinUrl('images/icons/thumbs-up.png'); ?>" alt="Thumbs Up icon"> 40</span></a>
             </li>
             <?php else: ?>
             <li class="empty">&nbsp;</li>
             <?php endif; ?>
         <?php endfor; ?>
-    <?php endfor; ?>
+
     </ul>
-    <script type="text/javascript">decorateTable('upsell-product-table')</script>
+    
 <?php endif ?>
