--- a/app/design/frontend/base/default/template/customer/address.phtml
+++ b/app/design/frontend/base/default/template/customer/address.phtml
@@ -28,58 +28,56 @@
     <h1><?php echo $this->__('Address Books') ?></h1>
 </div>
 <?php echo $this->getMessagesBlock()->getGroupedHtml() ?>
-<table width="100%">
-    <tr>
-        <td style="width:50%;"><h3>Default</h3>
-            <table width="100%">
-            <?php if(!empty($primaryAddresses)): ?>
-                <?php foreach($primaryAddresses as $_address): ?>
-                <tr>
-                    <td>
-                    <address>
-                        <?php echo $_address->format('html') ?>
-                    </address>
-                    <p>
-                        <strong><a href="<?php echo $this->getUrl('customer/address/form', array('address'=>$_address->getAddressId())) ?>" class="red-link"><?php echo $this->__('Edit Address') ?></a></strong>
-                    </p>
-                    </td>
-                </tr>
-                <?php endforeach; ?>
-            <?php else: ?>
-                <tr>
-                    <td>
-                        <p><?php echo $this->__('You have no default entries in your address book.') ?></p>
-                    </td>
-                </tr>
-            <?php endif ?>
-            </table>
-        </td>
-        <td style="width:50%;"><h3><?php echo $this->__('Additional Address Entries') ?></h3>
-            <table width="100%">
-            <?php if(!empty($alternativeAddresses)): ?>
-                <?php foreach($alternativeAddresses as $_address): ?>
-                <tr>
-                    <td>
-                    <address>
-                        <?php echo $_address->format('html') ?>
-                    </address>
-                    <p>
+
+
+<div class="half-col left">
+    <div class="box">
+		            <a class="editable right" href="<?php echo $this->getAddressBookUrl() ?>"><?php echo $this->__('Manage') ?></a>
+        <div class="box-content">
+	            <h2><?php echo $this->__('Address Book') ?></h2>
+			<div class="twothird left">	                
+				<div class="col-1 third">
+					<p><strong><?php echo $this->__('Billing') ?></strong></p>
+				</div>
+				<?php if(!empty($primaryAddresses)): ?>
+				    <?php foreach($primaryAddresses as $_address): ?>
+                <div class="col-2 twothird">
+	                <address>
+	                    <p><?php echo $_address->format('html') ?></p><br />
+	                </address>
+			        <p><strong><a href="<?php echo $this->getUrl('customer/address/form', array('address'=>$_address->getAddressId())) ?>" class="red-link"><?php echo $this->__('Edit Address') ?></a></strong></p>
+				    <?php endforeach; ?>
+				<?php else: ?>
+					<p><?php echo $this->__('You have no default entries in your address book.') ?></p>
+				</div>
+				<?php endif ?>
+			</div>
+			
+			<div class="twothird-col left">
+				<div class="col-1 third">
+                	<p><strong><?php echo $this->__('Additional Address Entries') ?></strong></p>
+				</div>
+				
+				<?php if(!empty($alternativeAddresses)): ?>
+	                <?php foreach($alternativeAddresses as $_address): ?>
+				<div class="col-2 twothird">
+	                <address>
+	                    <p><?php echo $_address->format('html') ?></p><br />
+	                </address>
+					<p>
                         <strong><a href="<?php echo $this->getUrl('customer/address/form', array('address'=>$_address->getAddressId())) ?>" class="red-link"><?php echo $this->__('Edit Address') ?></a></strong><span class="separator">&nbsp;|&nbsp;</span><strong><a href="#" onclick="return deleteAddress('<?php echo $_address->getAddressId() ?>');" class="red-link"><?php echo $this->__('Delete Address') ?></a></strong>
                     </p>
-                    </td>
-                </tr>
-                <?php endforeach; ?>
+				</div>
+				<?php endforeach; ?>
             <?php else: ?>
-                <tr>
-                    <td>
-                        <p><?php echo $this->__('You have no additional entries in your address book.') ?></p>
-                    </td>
-                </tr>
-            <?php endif ?>
-            </table>
-        </td>
-    </tr>
-</table>
+	<p><?php echo $this->__('You have no additional entries in your address book.') ?></p>
+			</div> 	
+		 <?php endif ?>	
+        </div>
+    </div>
+</div>
+
+
 <div class="buttons-set">
     <p class="back-link"><a href="<?php echo $this->getUrl('customer/account/') ?>"><small>&laquo; </small><?php echo $this->__('Back') ?></a></p>
     <button type="button" onclick="window.location='<?php echo $this->getUrl('customer/address/form') ?>';" class="button"><span><span><?php echo $this->__('New Address') ?></span></span></button>
