--- a/app/design/frontend/base/default/template/catalog/product/list/upsell.phtml
+++ b/app/design/frontend/base/default/template/catalog/product/list/upsell.phtml
@@ -31,7 +31,7 @@
    
         <?php for($_j=0;$_j<$this->getColumnCount();$_j++): ?>
             <?php if($_link=$this->getIterableItem()): ?>                
-			<li><a href="<?php echo $_link->getProductUrl() ?>" title="<?php echo $this->htmlEscape($_link->getName()) ?>"><img src="<?php echo $this->helper('catalog/image')->init($_link, 'small_image')->resize(114) ?>" width="114" height="114" alt="<?php echo $this->htmlEscape($_link->getName()) ?>" /> <span class="numLikes"><img src="_images/icons/thumbs-up.png" alt="Thumbs Up icon"> 40</span></a></li>
+			<li><a href="<?php echo $_link->getProductUrl() ?>" title="<?php echo $this->htmlEscape($_link->getName()) ?>"><img src="<?php echo $this->helper('catalog/image')->init($_link, 'small_image')->resize(114) ?>" width="114" height="114" alt="<?php echo $this->htmlEscape($_link->getName()) ?>" /> <span class="numLikes"><img src="<?php echo $this->getSkinUrl('images/icons/thumbs-up.png'); ?>" alt="Thumbs Up icon"> 40</span></a></li>
             <?php else: ?>
           
             <?php endif; ?>
