--- a/app/design/frontend/default/rooja/template/catalog/product/list.phtml
+++ b/app/design/frontend/default/rooja/template/catalog/product/list.phtml
@@ -66,10 +66,10 @@ echo '<span class="numLeft">'.$stock_count.'</span>';
 <script type="text/javascript">
 	jQuery(document).ready(function(){
 		jQuery(".product").hover(function () {
-		    $(this).child('.productName').show();
+		    jQuery(this).child('.productName').show();
 		  }, 
 		  function () {
-		    $(this).child('.productName').hide();
+		    jQuery(this).child('.productName').hide();
 		  });
 	 });
 			
