fb open graph on product page

--- a/app/design/frontend/default/rooja/template/catalog/category/view.phtml
+++ b/app/design/frontend/default/rooja/template/catalog/category/view.phtml
@@ -73,12 +73,19 @@ $expired = 1;
 		<div class="shareThis">
 			<p>Share this sale with your friends</p>
 			<!-- AddThis Button BEGIN -->
-			<div class="addthis_toolbox addthis_default_style">
+			<div class="addthis_toolbox addthis_default_style" addthis:title="<?php echo $_helper->categoryAttribute($_category, $_category->getName(), 'name') ?>" addthis:description="Like my pick? Visit Rooja.com now and get access to top designer brands at upto 60% off retail. The website requires membership. Good news: membership is free. :)">
 			<a class="addthis_button_facebook"><img src="<?php echo $this->getSkinUrl('images/icons/facebook-blue-24.png'); ?>" alt="facebook icon"></a>
-			<a class="addthis_button_twitter"><img src="<?php echo $this->getSkinUrl('images/icons/twitter-teal-24.png'); ?>" alt="twitter icon"></a>
+			<a class="addthis_button_twitter" tw:via="RoojaFashion"><img src="<?php echo $this->getSkinUrl('images/icons/twitter-teal-24.png'); ?>" alt="twitter icon"></a>
 			<a class="addthis_button_email"><img src="<?php echo $this->getSkinUrl('images/icons/email-24.png'); ?>" alt="facebook icon"></a>
 			</div>
-			<script type="text/javascript">var addthis_config = {"data_track_clickback":true};</script>
+			<script type="text/javascript">
+				var addthis_config = {"data_track_clickback":true};
+				var addthis_share = { 
+				    templates: {
+				                twitter: '<?php echo $_helper->categoryAttribute($_category, $_category->getName(), 'name') ?> sale on Rooja. Upto 60% off retail. {{url}} via @RoojaFashion'
+				               }
+				}
+				</script>
 			<script type="text/javascript" src="http://s7.addthis.com/js/250/addthis_widget.js#pubid=philosophie"></script>
 			<!-- AddThis Button END -->
 		</div>
