--- a/app/design/frontend/default/rooja/template/page/html/head.phtml
+++ b/app/design/frontend/default/rooja/template/page/html/head.phtml
@@ -59,7 +59,7 @@ jQuery(function($){
 <?php  if (Mage::registry('current_product')) : ?>
 <meta property="og:image" content="<?php echo Mage::helper('catalog/image')->init(Mage::registry('current_product'), 'small_image')->resize(100,100);?>" />
 <meta property="og:title" content="<?php echo Mage::registry('current_product')->getName()?>" /> 
-<meta property="og:description" content="<?php echo Mage::registry('current_product')->getDescription()?>" /> 
+<meta property="og:description" content="Like my pick? Visit Rooja.com now and get access to top designer brands at upto 60% off retail. The website requires membership. Good news: membership is free. :)" /> 
 <meta property="og:type" content="product"/>
 <meta property="og:url" content="<?php echo $this->helper('core/url')->getCurrentUrl(); ?>"/>
 <meta property="og:site_name" content="Rooja"/>
