--- a/app/design/frontend/base/default/template/customer/form/edit.phtml
+++ b/app/design/frontend/base/default/template/customer/form/edit.phtml
@@ -59,7 +59,7 @@
             </li>
         </ul>
 
-		   <p class="required left"><?php echo $this->__('* Required Fields') ?></p><br/>
+		   <p class="required left"><?php echo $this->__('* Required Fields') ?></p><br/><div class="clear"></div>
 	     <button type="submit" title="<?php echo $this->__('Save') ?>" class="button"><span><span><?php echo $this->__('Save') ?></span></span></button>
 
     </div>
