fb open graph on product page

--- a/app/design/frontend/default/rooja/template/page/html/head.phtml
+++ b/app/design/frontend/default/rooja/template/page/html/head.phtml
@@ -55,6 +55,7 @@ jQuery(function($){
  $('id').hide();
 </script>
 
+<meta property="og:description" content="Apparel and accessories from leading International and Indian designers at prices you just can&rsquo;t get in the stores."/>
 <?php  if (Mage::registry('current_product')) : ?>
 <meta property="og:title" content="<?php echo Mage::registry('current_product')->getName()?>"/> 
 <meta property="og:description" content="Like my pick? Visit Rooja.com now and get access to top designer brands at upto 60% off retail. The website requires membership. Good news: membership is free. :)"/> 
