typography and removing 'back' links on footer

--- a/skin/frontend/default/rooja/css/styles.css
+++ b/skin/frontend/default/rooja/css/styles.css
@@ -1146,6 +1146,9 @@ tr.summary-details-excluded { font-style:italic; }
 .block-account{line-height:20px;}
 #pageContent .my-account h2{margin-top:0;}
 
+
+
+.rewardsref_plaxo_link_caption {padding:10px 0;}
 /********** Dashboard > */
 
 /* Address Book */
