--- a/app/design/frontend/default/rooja/template/page/product.phtml
+++ b/app/design/frontend/default/rooja/template/page/product.phtml
@@ -31,7 +31,7 @@
 ?>
 <?php $current_url = $this->helper('core/url')->getCurrentUrl(); ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="<?php echo $this->getLang() ?>" lang="<?php echo $this->getLang() ?>">
+<html xmlns:fb="http://www.facebook.com/2008/fbml" xmlns:og="http://opengraphprotocol.org/schema/" xmlns="http://www.w3.org/1999/xhtml"  xml:lang="<?php echo $this->getLang() ?>" lang="<?php echo $this->getLang() ?>" dir="ltr">
 <head>
 <?php echo $this->getChildHtml('head') ?>
 </head>
