--- a/app/design/frontend/default/rooja/template/page/html/head.phtml
+++ b/app/design/frontend/default/rooja/template/page/html/head.phtml
@@ -59,7 +59,7 @@
 <meta property="og:title" content="<?php echo trim(Mage::registry('current_category')->getName())?>"/>
 <meta property="og:type" content="product"/>
 <meta property="og:url" content="<?php echo $this->helper('core/url')->getCurrentUrl() ?>"/>
-<meta property="og:description" content="<?php echo htmlspecialchars($this->getDescription()) ?>"/>
+<meta property="og:description" content="Apparel and accessories from leading International and Indian designers at prices you just can&rsquo;t get in the stores"/>
 <?php if(trim(Mage::registry('current_category')->getImageUrl()=="")): ?>
 <meta property="og:image" content="http://rooja.com/_images/rooja-logo-fb.png"/>
 <?php else: ?>
