--- a/app/design/frontend/base/default/template/customer/address/book.phtml
+++ b/app/design/frontend/base/default/template/customer/address/book.phtml
@@ -81,6 +81,7 @@
 				</div>
 			</div>
 			
+			<div class="clear"></div>
 			<div class="twothird-col left">
 				<div class="col-1 third">
 				        <?php if($_pAddsses = Mage::getSingleton('customer/session')->getCustomer()->getDefaultShipping()): ?>
