--- a/app/design/frontend/base/default/template/rewardsref/customer/referral/invite/plaxo/referral_form.phtml
+++ b/app/design/frontend/base/default/template/rewardsref/customer/referral/invite/plaxo/referral_form.phtml
@@ -14,35 +14,14 @@
 
 <div class="ref-form half-col left">
         <fieldset>
-            <h3 class="page-invite-head"><?php echo $this->__('Send Invitations') ?></h3>
+            <h3 class="page-invite-head">Send Invitations</h3>
             <div class="input-box" >
-                <label for="to"><?php echo $this->__('To') ?></label>
-                <table>
-                    <tbody>
-                        <tr>
-                            <td style="width: 50%">
+                <label for="to">To</label>
+               <br/>
                                 <textarea name="contacts" id="recipient_list" class="rewardsref_recipient_list" rows="7"></textarea>
                                 <br/>
                                 <?php echo $this->getChildHtml('plaxo_contact_chooser'); ?>
-                            </td>
-
-                            <!-- <td>
-                            	 <div class="rewardsref_invite_field_format">
-                                    <p class="comment">
-                                    <?php// echo $this->__('To reduce the chance that your message is marked as spam, please follow this format:'); ?>
-                                   <BR /><b>&quot;contact name&quot; &lt;email@address.com&gt;</b>
-                                          </p>
-                                      <p class="comment">
-                                       <?php// echo $this->__('Example contact list:'); ?><br/>
-                                       &quot;fullname&quot; &lt;email@test.ca&gt;, my@friend.com<br/> 
-                                       email@address.com, another@friend.com, me@test.ca
-                                   </p>
-                                </div> 
-                            </td>-->
-
-                        </tr>
-                    </tbody>
-                </table>
+                            
                 <br/>
             </div>
 
@@ -52,8 +31,8 @@
             </div>
 
             <div class="input-box">
-                <label for="message"><?php echo $this->__('Message (Optional)') ?> </label><br />
-                <textarea name="message" id="message" class="required-entry textarea" style="width:100%;" rows="4" cols="80" title="<?php echo $this->__('Short Message') ?>" >Please accept this invitation to join Rooja. Rooja provides you access to all of the best deals in fashion, up to 80% off. Membership is free, join today!</textarea>
+                <label for="message">Message</label><br />
+                <textarea name="message" id="message" class="required-entry textarea" style="width:100%;" rows="4" cols="80" title="<?php echo $this->__('Short Message') ?>" >Join me at rooja.com! Rooja brings you carefully selected fashion products from internationally renowned designers and brands at discounts upto 60%. Best of all: Membership is free. ;)</textarea>
             </div>
 
             <div class="button-set" style="margin-top:0px">
