--- a/skin/frontend/base/default/css/rewardsref/plaxo.css
+++ b/skin/frontend/base/default/css/rewardsref/plaxo.css
@@ -28,4 +28,4 @@
 .rewardsref_myreferrals_multireferral_section label {
     font-weight: bold;
 }
-#message{margin-top:10px;}
+.referrals #message{margin-top:10px;padding:8px;width:319px;}
